@@ -1,7 +1,7 @@
 AC_INIT(src/plugin.c)
 AM_MAINTAINER_MODE
 
-PLUGINVERSION=1.5
+PLUGINVERSION=1.6
 AC_DEFINE_UNQUOTED(PLUGINVERSION, "$PLUGINVERSION", [plugin version])
 AM_INIT_AUTOMAKE(mailmbox, $PLUGINVERSION, no-define)
 AC_SUBST(PLUGINVERSION)
